--- a/src/css/home.css
+++ b/src/css/home.css
@@ -32,14 +32,7 @@
 }
 
 .expand-icon {
-    border: 1px solid grey;
-    height: 30px;
-    width: 150px;
-    border-radius: 180px;
-    margin: auto;
-    margin-top: 3%;
-    text-align: center;
-    vertical-align: middle;
+    margin-left: 43%;
     cursor: pointer;
 }
 
