Fixed some issues

--- a/src/css/game_type.css
+++ b/src/css/game_type.css
@@ -16,6 +16,7 @@
 .wrapper {
     position: relative;
     margin: auto;
+    cursor: pointer;
   }
   
 .logo {
@@ -50,7 +51,6 @@
     color: black;
     font-family: Gilroy;
     color: #000000;
-    background-color: #ffffff;
 }
 
 .category-section {
