improvement in top nav bar due to new design

--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -1,271 +1,271 @@
-.inline{
-    flex-direction: row;
+.inline {
+  flex-direction: row;
 }
 
 .bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 36px;
-  }
-  
-  /* Color/shape of burger icon bars */
-  .bm-burger-bars {
-    background: #373a47;
-  }
-  
-  /* Color/shape of burger icon bars on hover*/
-  .bm-burger-bars-hover {
-    background: #a90000;
-  }
-  
-  /* Position and sizing of clickable cross button */
-  .bm-cross-button {
-    height: 24px;
-    width: 24px;
-  }
-  
-  /* Color/shape of close button cross */
-  .bm-cross {
-    background: #bdc3c7;
-  }
-  
-  /*
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+/*
   Sidebar wrapper styles
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
-  .bm-menu-wrap {
-    position: fixed;
-    height: 100%;
-  }
-  
-  /* General sidebar styles */
-  .bm-menu {
-    background: #373a47;
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-  }
-  
-  /* Morph shape necessary with bubble or elastic */
-  .bm-morph-shape {
-    fill: #373a47;
-  }
-  
-  /* Wrapper for item list */
-  .bm-item-list {
-    color: #b8b7ad;
-    padding: 0.8em;
-  }
-  
-  /* Individual item */
-  .bm-item {
-    display: inline-block;
-  }
-  
-  /* Styling of overlay */
-  .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
-  }
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
 
-  .Sports {
-    width: 87px;
-    height: 22px;
-    object-fit: contain;
-    font-size: 18px;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 1px;
-    color: #ffffff;
-  }
+.Sports {
+  width: 87px;
+  height: 22px;
+  object-fit: contain;
+  font-size: 18px;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
 
-  .Live-Casino {
-    width: 140px;
-    height: 22px;
-    object-fit: contain;
-    font-size: 18px;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 1px;
-    color: #ffffff;
-  }
+.Live-Casino {
+  width: 140px;
+  height: 22px;
+  object-fit: contain;
+  font-size: 18px;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
 
-  .Games {
-    margin-left: 10px;
-    width: 89px;
-    height: 22px;
-    object-fit: contain;
-    font-size: 18px;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 1px;
-    color: #ffffff;
-  }
+.Games {
+  margin-left: 10px;
+  width: 89px;
+  height: 22px;
+  object-fit: contain;
+  font-size: 18px;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
 
-  .Lottery {
-    width: 96px;
-    height: 22px;
-    object-fit: contain;
-    font-size: 18px;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 1px;
-    color: #ffffff;
-  }
-  
-  .soccer {
-    width: 22px;
-    height: 22px;
-    object-fit: contain;
-  }
+.Lottery {
+  width: 96px;
+  height: 22px;
+  object-fit: contain;
+  font-size: 18px;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
+.soccer {
+  width: 22px;
+  height: 22px;
+  object-fit: contain;
+}
 
-  .bet {
-    width: 22px;
-    height: 22px;
-    object-fit: contain;
-  }
+.bet {
+  width: 22px;
+  height: 22px;
+  object-fit: contain;
+}
 
-  .games-icon {
-    width: 26px;
-    height: 24px;
-    object-fit: contain;
-  }
+.games-icon {
+  width: 26px;
+  height: 24px;
+  object-fit: contain;
+}
 
-  .lottery {
-    width: 20px;
-    height: 23px;
-    object-fit: contain;
-  }
+.lottery {
+  width: 20px;
+  height: 23px;
+  object-fit: contain;
+}
+
+.mainButtonActive {
+  opacity: 1;
+
+}
+
+.mainButton {
+  opacity: 0.5;
+  background-color: #ffffff;
+}
+
+.mainButton:hover {
+  opacity: 1;
+  background-color: #000000 !important;
+}
 
 
-  $background-color: #000;
-  $search-bg-color: #000;
-  $icon-color: #fff;
-  $transition: all .5s ease;
-  * {
-    box-sizing: border-box;
-  }
-  
-  .search {
-    position: absolute;
-    z-index: 2;
-    right:0;
-    width: 72px;
-    height: 52px;
-    background-color: $search-bg-color;
-    overflow: hidden;
-    transition: $transition;
-    &:before {
-      content: '';
-      display: block;
-      width: 0px;
-      height: 100%;
-      position: relative;
-      transition: $transition;
-    }
-    &.open {
-      width: 100%;
-      &:before {
-        height: 72px;
-        margin: 20px 0 20px 20px;
-        position: absolute;
-      }
-    }
-  }
-  
-  .search-box {
-    width: 100%;
-    height: 100%;
-    box-shadow: none;
-    border: none;
-    background: transparent;
-    color: #fff;
-    font-size: 22px;
-    &:focus {
-      outline: none;
-    }
-  }
-  
-  .search-input {
-    width: 300px;
-    height: 100%;
-    box-shadow: none;
-    border: 0px;
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -20%);
-    color: #fff;
-    font-size: 22px;
-    &:focus {
-      outline: none;
-    }
-  }
-
-  .search-button {
-    width: 72px;
-    height: 72px;
+$background-color: #212121;
+$search-bg-color: #212121;
+$icon-color: #fff;
+$transition: all 0.5s ease;
+* {
+  box-sizing: border-box;
+}
+.search {
+  position: absolute;
+  z-index: 2;
+  right: 0;
+  width: 72px;
+  height: 40px;
+  background-color: $search-bg-color;
+  overflow: hidden;
+  transition: $transition;
+  &:before {
+    content: "";
     display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .search-icon {
-    width: 24px;
-    height: 24px;
-    border-radius: 40px;
-    border: 2px solid $icon-color;
-    display: block;
+    width: 0px;
+    height: 100%;
     position: relative;
     transition: $transition;
+  }
+  &.open {
+    width: 100%;
     &:before {
-      content: '';
-      width: 2px;
-      height: 10px;
+      height: 72px;
+      margin: 20px 0 20px 20px;
       position: absolute;
-      right: -2px;
-      top: 18px;
-      display: block;
-      background-color: $icon-color;
-      transform: rotate(-45deg);
-      transition: $transition;
-    }
-    &:after {
-      content: '';
-      width: 2px;
-      height: 10px;
-      position: absolute;
-      right: -9px;
-      top: 25px;
-      display: block;
-      background-color: $icon-color;
-      transform: rotate(-45deg);
-      transition: $transition;
-    }
-    .open & {
-      margin: 0;
-      width: 60px;
-      height: 60px;
-      border:0px;
-      &:before {
-        transform: rotate(40deg);
-        right: 32px;
-        top: 0px;
-        height: 32px;
-      }
-      &:after {
-        transform: rotate(-220deg);
-        right: 31px;
-        top: 0px;
-        height: 32px;
-      }
     }
   }
+}
+.search-box {
+  width: 100%;
+  height: 100%;
+  box-shadow: none;
+  border: none;
+  background: transparent;
+  color: #fff;
+  font-size: 22px;
+  &:focus {
+    outline: none;
+  }
+}
+.search-input {
+  width: 300px;
+  height: 100%;
+  box-shadow: none;
+  border: 0px;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  color: #fff;
+  font-size: 22px;
+  &:focus {
+    outline: none;
+  }
+}
+
+.search-button {
+  width: 72px;
+  height: 52px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0px;
+  cursor: pointer;
+}
+.search-icon {
+  width: 24px;
+  height: 24px;
+  border-radius: 40px;
+  border: 2px solid $icon-color;
+  display: block;
+  position: relative;
+  transition: $transition;
+  &:before {
+    content: "";
+    width: 2px;
+    height: 10px;
+    position: absolute;
+    right: -2px;
+    top: 18px;
+    display: block;
+    background-color: $icon-color;
+    transform: rotate(-45deg);
+    transition: $transition;
+  }
+  &:after {
+    content: "";
+    width: 2px;
+    height: 10px;
+    position: absolute;
+    right: -9px;
+    top: 25px;
+    display: block;
+    background-color: $icon-color;
+    transform: rotate(-45deg);
+    transition: $transition;
+  }
+  .open & {
+    margin: 0;
+    width: 60px;
+    height: 60px;
+    border: 0px;
+    &:before {
+      transform: rotate(40deg);
+      right: 32px;
+      top: 0px;
+      height: 32px;
+    }
+    &:after {
+      transform: rotate(-220deg);
+      right: 31px;
+      top: 0px;
+      height: 32px;
+    }
+  }
+}
