--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -61,6 +61,7 @@ button:focus { outline:0 !important; }
 }
 
 .Sports {
+  margin-left: 10px;
   width: 87px;
   height: 22px;
   object-fit: contain;
@@ -73,6 +74,7 @@ button:focus { outline:0 !important; }
 }
 
 .Live-Casino {
+  margin-left: 10px;
   width: 140px;
   height: 22px;
   object-fit: contain;
@@ -98,6 +100,7 @@ button:focus { outline:0 !important; }
 }
 
 .Lottery {
+  margin-left: 10px;
   width: 96px;
   height: 22px;
   object-fit: contain;
