games menu item name has changed to slots

--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -86,7 +86,7 @@ button:focus { outline:0 !important; }
   color: #ffffff;
 }
 
-.Games {
+.Slots {
   margin-left: 10px;
   width: 89px;
   height: 22px;
