--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -160,7 +160,7 @@ $transition: all 0.5s ease;
 }
 .search {
   position: absolute;
-  z-index: 2;
+  // z-index: 2000;
   right: 0;
   width: 72px;
   height: 40px;
@@ -177,10 +177,12 @@ $transition: all 0.5s ease;
   }
   &.open {
     width: 100%;
+    overflow: visible !important;
     &:before {
       height: 72px;
       margin: 20px 0 20px 20px;
       position: absolute;
+
     }
   }
 }
@@ -201,7 +203,7 @@ $transition: all 0.5s ease;
   width: 480px;
   height: 100%;
   margin: 0 auto;
-    box-shadow: none;
+  box-shadow: none;
   border: none;
   background: transparent;
   color: #fff;
@@ -295,9 +297,7 @@ $transition: all 0.5s ease;
   height: 24px;
   border-radius: 40px;
   border: 2px solid $icon-color;
-  display: inline-block;
-  position: relative;
-  margin-right: 40px;
+  margin-right: 20px;
   &:before {
     content: "";
     width: 2px;
