--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -160,7 +160,7 @@ $transition: all 0.5s ease;
 }
 .search {
   position: absolute;
-  // z-index: 2000;
+  z-index: 2000;
   right: 0;
   width: 72px;
   height: 40px;
