hover effect is added on search results

--- a/src/css/search_bar.scss
+++ b/src/css/search_bar.scss
@@ -11,12 +11,6 @@
   font-size: 16;
 }
 
-.icon-expand-link .contract {
-  display: none;
-}
-.icon-expand-link:hover .expand {
-  display: none;
-}
-.icon-expand-link:hover .contract {
-  display: block;
+.expand-link:hover path {
+  fill: #fe0000;
 }
