--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -154,13 +154,30 @@ button:focus {
 $background-color: #212121;
 $search-bg-color: #212121;
 $icon-color: #fff;
-$transition: all 0.5s ease;
+$transition: all 0.65s ease;
 * {
   box-sizing: border-box;
 }
+
+.fullscreen-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(90, 90, 90, 0.5);
+  z-index: 1999;
+  &.open {
+    display: block;
+  }
+}
+
+
 .search {
   position: absolute;
   z-index: 2000;
+  bottom: 6px;
   right: 0;
   width: 72px;
   height: 40px;
@@ -241,8 +258,9 @@ $transition: all 0.5s ease;
   cursor: pointer;
 }
 .search-icon {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
+  top:8px;
   border-radius: 40px;
   border: 2px solid $icon-color;
   display: block;
@@ -254,7 +272,7 @@ $transition: all 0.5s ease;
     height: 10px;
     position: absolute;
     right: -2px;
-    top: 18px;
+    top: 15px;
     display: block;
     background-color: $icon-color;
     transform: rotate(-45deg);
@@ -266,7 +284,7 @@ $transition: all 0.5s ease;
     height: 6px;
     position: absolute;
     right: -7px;
-    top: 25px;
+    top: 22px;
     display: block;
     background-color: $icon-color;
     transform: rotate(-45deg);
@@ -289,37 +307,5 @@ $transition: all 0.5s ease;
       top: 0px;
       height: 32px;
     }
-  }
-}
-
-.search-icon-before {
-  width: 24px;
-  height: 24px;
-  border-radius: 40px;
-  border: 2px solid $icon-color;
-  margin-right: 20px;
-  &:before {
-    content: "";
-    width: 2px;
-    height: 10px;
-    position: absolute;
-    right: -2px;
-    top: 18px;
-    display: block;
-    background-color: $icon-color;
-    transform: rotate(-45deg);
-    transition: $transition;
-  }
-  &:after {
-    content: "";
-    width: 2px;
-    height: 6px;
-    position: absolute;
-    right: -7px;
-    top: 25px;
-    display: block;
-    background-color: $icon-color;
-    transform: rotate(-45deg);
-    transition: $transition;
   }
 }
