--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -154,7 +154,8 @@ button:focus {
 $background-color: #212121;
 $search-bg-color: #212121;
 $icon-color: #fff;
-$transition: all 0.65s ease;
+$transition: all 0.45s ease;
+$out_transition: all 0.15s ease;
 * {
   box-sizing: border-box;
 }
@@ -179,7 +180,7 @@ $transition: all 0.65s ease;
   z-index: 2000;
   bottom: 6px;
   right: 0;
-  width: 72px;
+  width: 0px;
   height: 40px;
   background-color: $search-bg-color;
   overflow: hidden;
@@ -194,7 +195,7 @@ $transition: all 0.65s ease;
   }
   &.open {
     width: 100%;
-    overflow: visible !important;
+    overflow: visible;
     &:before {
       height: 72px;
       margin: 20px 0 20px 20px;
@@ -248,24 +249,28 @@ $transition: all 0.65s ease;
 }
 
 .search-button {
-  width: 72px;
-  height: 100%;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 0px;
+  width: 50px;
+  height: 40px;
+  z-index: 2001;
+  margin-bottom: 4px;
+  display: inline-block;
+  // display: block;
+  // position: fixed;
+  // right: 0;
+  // margin: 1;
+  // padding: 0px;
   cursor: pointer;
 }
 .search-icon {
   width: 20px;
   height: 20px;
   top:8px;
+  right: -15px;
   border-radius: 40px;
   border: 2px solid $icon-color;
   display: block;
   position: relative;
-  transition: $transition;
+  transition: $out_transition;
   &:before {
     content: "";
     width: 2px;
@@ -276,7 +281,7 @@ $transition: all 0.65s ease;
     display: block;
     background-color: $icon-color;
     transform: rotate(-45deg);
-    transition: $transition;
+    transition: $out_transition;
   }
   &:after {
     content: "";
@@ -288,13 +293,14 @@ $transition: all 0.65s ease;
     display: block;
     background-color: $icon-color;
     transform: rotate(-45deg);
-    transition: $transition;
+    transition: $out_transition;
   }
   .open & {
-    margin: 0;
-    width: 60px;
-    height: 60px;
-    border: 0px;
+    width: 20px;
+  height: 20px;
+  top:8px;
+  right: -40px;
+  border: 0;
     &:before {
       transform: rotate(40deg);
       right: 32px;
@@ -308,4 +314,17 @@ $transition: all 0.65s ease;
       height: 32px;
     }
   }
+}
+
+.overlay {
+  position: fixed; /* Positioning and size */
+  top: 144;
+  z-index: 1999;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0,0,0);
+  opacity: 0.5;
+
+   display: none; /* making it hidden by default */
 }
