Added personal details page and contact detail page

--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -343,9 +343,10 @@ $out_transition: all 0.15s ease;
 }
 
 .signup-window {
-  height: 600px;
+  height: 680px;
   width: 700px;
   text-align: center;
+  background-color: 'red'
 }
 
 .signup-title {
