open bets & settled bets

--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -382,3 +382,11 @@ $out_transition: all 0.15s ease;
 .userIconHover path{
   stroke: #ffffff;
 }
+
+.profileIcon path {
+  stroke: #212121;
+}
+
+.profileIconHover path{
+  stroke: #ff0000;
+}
