--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -251,7 +251,7 @@ $out_transition: all 0.15s ease;
 .search-button {
   width: 50px;
   height: 40px;
-  z-index: 2001;
+  //z-index: 2001;
   margin-top: 16px;
   display: inline-block;
   // display: block;
