add withdraw page

--- a/src/css/deposit.css
+++ b/src/css/deposit.css
@@ -4,6 +4,12 @@
     margin-top: 15px;
     align-content: center
 }
+.withdraw-form {
+    margin-left: 40%;
+    margin-right: 30%;
+    margin-top: 15px;
+    align-content: center
+}
 .input-deposit-amount {
     padding: 10px;
     margin-bottom: 14px;
