add select banks

--- a/src/css/deposit.css
+++ b/src/css/deposit.css
@@ -1,6 +1,10 @@
 .deposit-form {
     margin-left: 30%;
-    /* margin-right: 30%; */
+    margin-top: 15px;
+    align-content: center
+}
+.deposit-bankcard-form {
+    margin-left: 35%;
     margin-top: 15px;
     align-content: center
 }
