--- a/src/css/deposit.css
+++ b/src/css/deposit.css
@@ -1,5 +1,6 @@
 .deposit-form {
-    margin-left: 38%;
+    margin-left: 30%;
+    margin-right: 20%;
     margin-top: 15px;
     align-content: center
 }
@@ -18,6 +19,10 @@
     padding: 10px;
     margin-bottom: 14px;
     /* margin-left: 30%; */
+}
+
+#submit-amount {
+    padding-top: 15px;
 }
 
 #deposit_form > span:nth-child(4) {
