--- a/src/css/deposit.css
+++ b/src/css/deposit.css
@@ -21,10 +21,14 @@
     /* margin-left: 30%; */
 }
 
+.navbar {
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
+}
 #submit-amount {
     padding-top: 15px;
 }
-
 #deposit_form > span:nth-child(4) {
     margin: 14px;
 }
