fgo deposit page

--- a/src/css/deposit.css
+++ b/src/css/deposit.css
@@ -9,6 +9,14 @@
     margin-top: 15px;
     align-content: center
 }
+.fgo-form{
+    margin-left: 40%;
+    margin-top: 15px;
+    align-content: center
+}
+.fgo-button{
+    padding-top: 15px;
+}
 .withdraw-form {
     margin-left: 40%;
     margin-right: 30%;
