--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -366,11 +366,11 @@ $out_transition: all 0.15s ease;
 }
 
 .userIcon path {
-  stroke: #212121;
+  stroke: rgba(0, 0, 0, 0.5);
 }
 
 .userIconHover path{
-  stroke: #ffffff;
+  stroke: rgba(0, 0, 0, 0.5);
 }
 
 .profileIcon path {
@@ -378,7 +378,7 @@ $out_transition: all 0.15s ease;
 }
 
 .profileIconHover path{
-  stroke: #ff0000;
+  stroke: rgba(0, 0, 0, 0.5);
 }
 input[type="checkbox"] + span {
   display: inline-block;
