--- a/src/css/top_navbar.scss
+++ b/src/css/top_navbar.scss
@@ -270,6 +270,7 @@ $out_transition: all 0.15s ease;
   // padding: 0px;
   cursor: pointer;
 }
+
 .search-icon {
   width: 20px;
   height: 20px;
@@ -322,6 +323,42 @@ $out_transition: all 0.15s ease;
       top: 0px;
       height: 32px;
     }
+  }
+}
+
+.mobile-search-icon {
+  width: 20px;
+  height: 20px;
+  margin-right:10px;
+  margin-top:-8px;
+ border-radius: 40px;
+  border: 2px solid $icon-color;
+  display: block;
+  position: relative;
+  transition: $out_transition;
+  &:before {
+    content: "";
+    width: 2px;
+    height: 10px;
+    position: absolute;
+    right: -2px;
+    top: 15px;
+    display: block;
+    background-color: $icon-color;
+    transform: rotate(-45deg);
+    transition: $out_transition;
+  }
+  &:after {
+    content: "";
+    width: 2px;
+    height: 6px;
+    position: absolute;
+    right: -7px;
+    top: 22px;
+    display: block;
+    background-color: $icon-color;
+    transform: rotate(-45deg);
+    transition: $out_transition;
   }
 }
 
