--- a/src/letou/css/banner.css
+++ b/src/letou/css/banner.css
@@ -7,8 +7,8 @@ a, address, article, b, big, body, center, code, dd, details, div, dl, em, foote
     vertical-align: baseline;
 }
 .PgSmallBanner {
-    width: 1000px;
-    height: 200px;
+    width: 100%;
+    height: auto;
     margin: 20px auto 0;
     overflow: hidden;
     position: relative;
@@ -68,13 +68,18 @@ a, address, article, b, big, body, center, code, dd, details, div, dl, em, foote
     overflow: hidden;
 }
 .BannerImg {
-    width: 1000px;
+    width: 60%;
+    position:relative;
+    margin-left:20%;
 }
 .PgMain {
-    width: 1000px;
+    width: 60%;
+    position:relative;
     height: auto;
     margin: 0 auto;
-    padding: 35px 0;
+    /* padding: 35px 0; */
+    margin-left:20%;
+    margin-right:20%;
 }
 .PgMain h2 {
     font-size: 26px;
@@ -91,8 +96,8 @@ a, address, article, b, big, body, center, code, dd, details, div, dl, em, foote
 }
 
 .PgHall {
-    width: 191px;
-    height: 340px;
+    width: 18%;
+    height: 50vh;
     border: 1px solid #f1f1f1;
     background-color: #fffdf8;
     margin-bottom: 10px;
