--- a/src/letou/css/banner.css
+++ b/src/letou/css/banner.css
@@ -94,16 +94,33 @@ a, address, article, b, big, body, center, code, dd, details, div, dl, em, foote
 .GameBrand, .GameDividendBtn, .GameDividendLR h3, .GameHotNew, .GameJptBox, .GameJptBoxBg, .GameListBg, .PgHallBtn, .PgMain h2, .PgMain h3, ul.PgHallBrand li {
     text-align: center;
 }
-
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
 .PgHall {
-    width: 20%;
-    /* height: 340; */
+    width: 191px;
+    height: 340px;
     border: 1px solid #f1f1f1;
     background-color: #fffdf8;
     margin-bottom: 10px;
-    float: left;
+    /* float: left; */
     flex-grow: 1;
-    flex-basis: 20%;
+    flex-basis: 18%;
+    align-items: flex-start;
+    
+}
+.emptyHall{
+    width: 191px;
+    height: 340px;
+    margin-bottom: 10px;
+    
+    /* float: left; */
+    flex-grow: 1;
+    flex-basis: 18%;
+    
+    margin-left: 8.75px;
 }
 .PgHall.MarginLeft {
     margin-left: 8.75px;
@@ -192,9 +209,11 @@ a, address, article, b, big, body, center, code, dd, details, div, dl, em, foote
     clear: both;
 }
 .PgHallListBox {
+    width: 100%;
     height: 135px;
     border: 1px solid #f1f1f1;
     overflow: hidden;
+
 }
 .PgHallListBox ul.List {
     width: 10%;
